# raspi-zero-restful-camera-control

./: .gitignore  Dockerfile  LICENSE  README.md  config.cfg  docker-compose.yaml  init.sh  install.sh  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
example/: compute_ndvi.py  fastiecm.py
hotspot/: dhcpcd.conf  dnsmasq.conf  hostapd.conf  setup.sh
jinja/: main.jinja2
oas/: openapi.yaml
src/: core.py  main.py  models.py  run.py  video.py
src/tools/: thread_demo.py
