[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "raspi-zero-fastapi-camera-control"
version = "0.1.0"
description = ""
authors = ["WOGRA AG <info@wogra.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
certifi = "^2021.10.8"

[tool.poetry.dev-dependencies]
opencv-python = "^4.5.1"
pytest = "^7.1.1"
coverage = { version = "^6.3.2", extras = ["toml"] }
isort = { version = "^5.6.4", extras = ["pyproject"] }
requests = "^2.25.0"
black = "~21.12b0"
click = "~8.0.2"
pytest-asyncio = "^0.18.3"
fastapi-code-generator = "^0.3.4"

[tool.black]
# https://github.com/psf/black
line-length = 120
target_version = ['py37']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 79
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0


[tool.coverage]
# https://github.com/nedbat/coveragepy

[tool.coverage.run]
source = ["src"]
branch = true
omit = ['']

[tool.coverage.report]
exclude_lines = [
    "# noqa",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
